# Baccal-

./: CMakeLists.txt  main.cpp
assets/: bishop_attacks.txt  bishop_magics.txt  rook_magics.txt
lib/: CMakeLists.txt
lib/include/: Baccala.h  Bitboards.h  Move.h  Position.h  TranspositionTable.h  Utilities.h
lib/src/: Baccala.cpp  Bitboards.cpp  Position.cpp  TranspositionTable.cpp  Utilities.cpp
